# projeto1

./: .gitignore  Dockerfile  database.db  databse.db  pyproject.toml
migrations/: env.py
migrations/versions/: 5edff2c54450_add_column_updated_at_in_users.py  96fbcae75b5f_adicionando_created_at_e_updated_at_na_.py  9fa58ef3dc9b_create_table_users.py  d86d5ac0d11c_create_todos_table.py
projeto1/: app.py  database.py  models.py  schemas.py  security.py  setting.py
projeto1/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
